# proyecto-cd-equipo-dji

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
data/processed/: gold_sp500_clean.csv  model_metadata.json  scaler.pkl
data/raw/: gold_data.csv  sp500.csv
huggingface/gold-predictions-backend/: Dockerfile  README.md  api.py  data_fetcher.py  model_utils.py  requirements.txt
huggingface/gold-predictions-backend/data/processed/: feature_columns.json
huggingface/gold-predictions-frontend/: Dockerfile  README.md  app.py
huggingface/gold-predictions-frontend/.streamlit/: config.toml
informe_escrito/: 00_informe_final_1.ipynb
notebooks/: 00_informe_final.ipynb  01_eda_inicial.ipynb  02_data_wrangling.ipynb
src/: README.md  docker-compose.yaml  env.example  modeling_pipeline.py  start.sh
src/backend/: Dockerfile  api.py  preprocessing.py  requirements.txt
src/frontend/: .dockerignore  DockerFile  app.py
src/pipelines/: train_pipeline.py
